--- a/src/pages/Tour/tour.module.css
+++ b/src/pages/Tour/tour.module.css
@@ -1,4 +1,4 @@
-.tour-page {
+.tourPage {
   position: relative;
   width: 100%;
   height: 100vh;
@@ -6,7 +6,7 @@
   box-sizing: border-box;
 }
 
-.tour-page::before {
+.tourPage::before {
   content: "";
   position: absolute;
   background-color: black;
@@ -22,7 +22,7 @@
   z-index: -1;
 }
 
-.tour-content {
+.tourContent {
   position: relative;
   z-index: 1;
   backdrop-filter: blur(10px); /* Optional: Adds blur to the content background */
@@ -32,7 +32,7 @@
 }
 
 
-.video-link {
+.videoLink {
   margin-top: 20px;
   display: flex;
   justify-content: center;
